# Autogen-Orchestrator

./: .gitignore  =3.9.0  BACKLOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
examples/: api_adapter_example.py  autogen_integration_example.py  basic_example.py
src/orchestrator/: __init__.py
src/orchestrator/adapters/: __init__.py  api_adapter.py  cli_adapter.py  vcs_adapter.py
src/orchestrator/agents/: __init__.py  architect_agent.py  base_agent.py  data_agent.py  dev_agent.py  devops_agent.py  docs_agent.py  pm_agent.py  qa_agent.py  research_agent.py  security_agent.py
src/orchestrator/contracts/: __init__.py  adapter_contract.py  agent_contract.py  evaluation_contract.py
src/orchestrator/core/: __init__.py  conversation.py  correction_loop.py  orchestrator.py  task.py
src/orchestrator/memory/: __init__.py  knowledge_base.py  memory_store.py
src/orchestrator/observability/: __init__.py  logger.py  metrics.py  tracer.py
src/orchestrator/plugins/: __init__.py  base.py  manager.py
src/orchestrator/utils/: __init__.py  config.py  platform.py
src/orchestrator/workflow/: __init__.py  definition.py  engine.py
tests/: __init__.py  test_agents.py  test_conversation.py  test_data_agent.py  test_memory.py  test_new_agents.py  test_orchestrator.py  test_plugins.py  test_task.py  test_utils.py  test_workflow.py
